Old/RemovedNativeApi/RemovedFromPal/Api/AuiToolBar.Api.h

ALTERNET_UI_API AuiToolBar* AuiToolBar_Create_()
{
    #if !defined(__WXMSW__)
    return MarshalExceptions<AuiToolBar*>([&](){
    #endif
        return new AuiToolBar();
    #if !defined(__WXMSW__)
    });
    #endif
}
ALTERNET_UI_API int64_t AuiToolBar_GetCreateStyle_(AuiToolBar* obj)
{
    #if !defined(__WXMSW__)
    return MarshalExceptions<int64_t>([&](){
    #endif
        return obj->GetCreateStyle();
    #if !defined(__WXMSW__)
    });
    #endif
}
ALTERNET_UI_API void AuiToolBar_SetCreateStyle_(AuiToolBar* obj, int64_t value)
{
    #if !defined(__WXMSW__)
    MarshalExceptions<void>([&](){
    #endif
        obj->SetCreateStyle(value);
    #if !defined(__WXMSW__)
    });
    #endif
}
ALTERNET_UI_API int AuiToolBar_GetEventToolId_(AuiToolBar* obj)
{
    #if !defined(__WXMSW__)
    return MarshalExceptions<int>([&](){
    #endif
        return obj->GetEventToolId();
    #if !defined(__WXMSW__)
    });
    #endif
}
ALTERNET_UI_API c_bool AuiToolBar_GetEventIsDropDownClicked_(AuiToolBar* obj)
{
    #if !defined(__WXMSW__)
    return MarshalExceptions<c_bool>([&](){
    #endif
        return obj->GetEventIsDropDownClicked();
    #if !defined(__WXMSW__)
    });
    #endif
}
ALTERNET_UI_API PointI_C AuiToolBar_GetEventClickPoint_(AuiToolBar* obj)
{
    #if !defined(__WXMSW__)
    return MarshalExceptions<PointI_C>([&](){
    #endif
        return obj->GetEventClickPoint();
    #if !defined(__WXMSW__)
    });
    #endif
}
ALTERNET_UI_API RectI_C AuiToolBar_GetEventItemRect_(AuiToolBar* obj)
{
    #if !defined(__WXMSW__)
    return MarshalExceptions<RectI_C>([&](){
    #endif
        return obj->GetEventItemRect();
    #if !defined(__WXMSW__)
    });
    #endif
}
ALTERNET_UI_API void AuiToolBar_DoOnCaptureLost_(AuiToolBar* obj)
{
    #if !defined(__WXMSW__)
    MarshalExceptions<void>([&](){
    #endif
        obj->DoOnCaptureLost();
    #if !defined(__WXMSW__)
    });
    #endif
}
ALTERNET_UI_API void AuiToolBar_DoOnLeftUp_(AuiToolBar* obj, int x, int y)
{
    #if !defined(__WXMSW__)
    MarshalExceptions<void>([&](){
    #endif
        obj->DoOnLeftUp(x, y);
    #if !defined(__WXMSW__)
    });
    #endif
}
ALTERNET_UI_API void AuiToolBar_DoOnLeftDown_(AuiToolBar* obj, int x, int y)
{
    #if !defined(__WXMSW__)
    MarshalExceptions<void>([&](){
    #endif
        obj->DoOnLeftDown(x, y);
    #if !defined(__WXMSW__)
    });
    #endif
}
ALTERNET_UI_API void* AuiToolBar_CreateEx_(int64_t styles)
{
    #if !defined(__WXMSW__)
    return MarshalExceptions<void*>([&](){
    #endif
        return AuiToolBar::CreateEx(styles);
    #if !defined(__WXMSW__)
    });
    #endif
}
ALTERNET_UI_API void AuiToolBar_SetArtProvider_(AuiToolBar* obj, void* art)
{
    #if !defined(__WXMSW__)
    MarshalExceptions<void>([&](){
    #endif
        obj->SetArtProvider(art);
    #if !defined(__WXMSW__)
    });
    #endif
}
ALTERNET_UI_API void* AuiToolBar_GetArtProvider_(AuiToolBar* obj)
{
    #if !defined(__WXMSW__)
    return MarshalExceptions<void*>([&](){
    #endif
        return obj->GetArtProvider();
    #if !defined(__WXMSW__)
    });
    #endif
}
ALTERNET_UI_API int AuiToolBar_GetToolKind_(AuiToolBar* obj, int toolId)
{
    #if !defined(__WXMSW__)
    return MarshalExceptions<int>([&](){
    #endif
        return obj->GetToolKind(toolId);
    #if !defined(__WXMSW__)
    });
    #endif
}
ALTERNET_UI_API void* AuiToolBar_AddTool_(AuiToolBar* obj, int toolId, const char16_t* label, ImageSet* bitmapBundle, const char16_t* shortHelpString, int itemKind)
{
    #if !defined(__WXMSW__)
    return MarshalExceptions<void*>([&](){
    #endif
        return obj->AddTool(toolId, label, bitmapBundle, shortHelpString, itemKind);
    #if !defined(__WXMSW__)
    });
    #endif
}
ALTERNET_UI_API void* AuiToolBar_AddTool2_(AuiToolBar* obj, int toolId, const char16_t* label, ImageSet* bitmapBundle, ImageSet* disabledBitmapBundle, int itemKind, const char16_t* shortHelpString, const char16_t* longHelpString, void* clientData)
{
    #if !defined(__WXMSW__)
    return MarshalExceptions<void*>([&](){
    #endif
        return obj->AddTool2(toolId, label, bitmapBundle, disabledBitmapBundle, itemKind, shortHelpString, longHelpString, clientData);
    #if !defined(__WXMSW__)
    });
    #endif
}
ALTERNET_UI_API void* AuiToolBar_AddTool3_(AuiToolBar* obj, int toolId, ImageSet* bitmapBundle, ImageSet* disabledBitmapBundle, c_bool toggle, void* clientData, const char16_t* shortHelpString, const char16_t* longHelpString)
{
    #if !defined(__WXMSW__)
    return MarshalExceptions<void*>([&](){
    #endif
        return obj->AddTool3(toolId, bitmapBundle, disabledBitmapBundle, toggle, clientData, shortHelpString, longHelpString);
    #if !defined(__WXMSW__)
    });
    #endif
}
ALTERNET_UI_API void* AuiToolBar_AddLabel_(AuiToolBar* obj, int toolId, const char16_t* label, int width)
{
    #if !defined(__WXMSW__)
    return MarshalExceptions<void*>([&](){
    #endif
        return obj->AddLabel(toolId, label, width);
    #if !defined(__WXMSW__)
    });
    #endif
}
ALTERNET_UI_API void* AuiToolBar_AddControl_(AuiToolBar* obj, int toolId, void* control, const char16_t* label)
{
    #if !defined(__WXMSW__)
    return MarshalExceptions<void*>([&](){
    #endif
        return obj->AddControl(toolId, control, label);
    #if !defined(__WXMSW__)
    });
    #endif
}
ALTERNET_UI_API void* AuiToolBar_AddSeparator_(AuiToolBar* obj, int toolId)
{
    #if !defined(__WXMSW__)
    return MarshalExceptions<void*>([&](){
    #endif
        return obj->AddSeparator(toolId);
    #if !defined(__WXMSW__)
    });
    #endif
}
ALTERNET_UI_API void* AuiToolBar_AddSpacer_(AuiToolBar* obj, int toolId, int pixels)
{
    #if !defined(__WXMSW__)
    return MarshalExceptions<void*>([&](){
    #endif
        return obj->AddSpacer(toolId, pixels);
    #if !defined(__WXMSW__)
    });
    #endif
}
ALTERNET_UI_API void* AuiToolBar_AddStretchSpacer_(AuiToolBar* obj, int toolId, int proportion)
{
    #if !defined(__WXMSW__)
    return MarshalExceptions<void*>([&](){
    #endif
        return obj->AddStretchSpacer(toolId, proportion);
    #if !defined(__WXMSW__)
    });
    #endif
}
ALTERNET_UI_API c_bool AuiToolBar_Realize_(AuiToolBar* obj)
{
    #if !defined(__WXMSW__)
    return MarshalExceptions<c_bool>([&](){
    #endif
        return obj->Realize();
    #if !defined(__WXMSW__)
    });
    #endif
}
ALTERNET_UI_API void* AuiToolBar_FindControl_(AuiToolBar* obj, int windowId)
{
    #if !defined(__WXMSW__)
    return MarshalExceptions<void*>([&](){
    #endif
        return obj->FindControl(windowId);
    #if !defined(__WXMSW__)
    });
    #endif
}
ALTERNET_UI_API void* AuiToolBar_FindToolByPosition_(AuiToolBar* obj, int x, int y)
{
    #if !defined(__WXMSW__)
    return MarshalExceptions<void*>([&](){
    #endif
        return obj->FindToolByPosition(x, y);
    #if !defined(__WXMSW__)
    });
    #endif
}
ALTERNET_UI_API void* AuiToolBar_FindToolByIndex_(AuiToolBar* obj, int idx)
{
    #if !defined(__WXMSW__)
    return MarshalExceptions<void*>([&](){
    #endif
        return obj->FindToolByIndex(idx);
    #if !defined(__WXMSW__)
    });
    #endif
}
ALTERNET_UI_API void AuiToolBar_SetToolProportion_(AuiToolBar* obj, int toolId, int proportion)
{
    #if !defined(__WXMSW__)
    MarshalExceptions<void>([&](){
    #endif
        obj->SetToolProportion(toolId, proportion);
    #if !defined(__WXMSW__)
    });
    #endif
}
ALTERNET_UI_API int AuiToolBar_GetToolProportion_(AuiToolBar* obj, int toolId)
{
    #if !defined(__WXMSW__)
    return MarshalExceptions<int>([&](){
    #endif
        return obj->GetToolProportion(toolId);
    #if !defined(__WXMSW__)
    });
    #endif
}
ALTERNET_UI_API void AuiToolBar_SetToolSeparation_(AuiToolBar* obj, int separation)
{
    #if !defined(__WXMSW__)
    MarshalExceptions<void>([&](){
    #endif
        obj->SetToolSeparation(separation);
    #if !defined(__WXMSW__)
    });
    #endif
}
ALTERNET_UI_API int AuiToolBar_GetToolSeparation_(AuiToolBar* obj)
{
    #if !defined(__WXMSW__)
    return MarshalExceptions<int>([&](){
    #endif
        return obj->GetToolSeparation();
    #if !defined(__WXMSW__)
    });
    #endif
}
ALTERNET_UI_API void AuiToolBar_SetToolSticky_(AuiToolBar* obj, int toolId, c_bool sticky)
{
    #if !defined(__WXMSW__)
    MarshalExceptions<void>([&](){
    #endif
        obj->SetToolSticky(toolId, sticky);
    #if !defined(__WXMSW__)
    });
    #endif
}
ALTERNET_UI_API c_bool AuiToolBar_GetToolSticky_(AuiToolBar* obj, int toolId)
{
    #if !defined(__WXMSW__)
    return MarshalExceptions<c_bool>([&](){
    #endif
        return obj->GetToolSticky(toolId);
    #if !defined(__WXMSW__)
    });
    #endif
}
ALTERNET_UI_API char16_t* AuiToolBar_GetToolLabel_(AuiToolBar* obj, int toolId)
{
    #if !defined(__WXMSW__)
    return MarshalExceptions<char16_t*>([&](){
    #endif
        return AllocPInvokeReturnString(obj->GetToolLabel(toolId));
    #if !defined(__WXMSW__)
    });
    #endif
}
ALTERNET_UI_API void AuiToolBar_SetToolLabel_(AuiToolBar* obj, int toolId, const char16_t* label)
{
    #if !defined(__WXMSW__)
    MarshalExceptions<void>([&](){
    #endif
        obj->SetToolLabel(toolId, label);
    #if !defined(__WXMSW__)
    });
    #endif
}
ALTERNET_UI_API void AuiToolBar_SetToolBitmap_(AuiToolBar* obj, int toolId, ImageSet* bitmapBundle)
{
    #if !defined(__WXMSW__)
    MarshalExceptions<void>([&](){
    #endif
        obj->SetToolBitmap(toolId, bitmapBundle);
    #if !defined(__WXMSW__)
    });
    #endif
}
ALTERNET_UI_API char16_t* AuiToolBar_GetToolShortHelp_(AuiToolBar* obj, int toolId)
{
    #if !defined(__WXMSW__)
    return MarshalExceptions<char16_t*>([&](){
    #endif
        return AllocPInvokeReturnString(obj->GetToolShortHelp(toolId));
    #if !defined(__WXMSW__)
    });
    #endif
}
ALTERNET_UI_API void AuiToolBar_SetToolShortHelp_(AuiToolBar* obj, int toolId, const char16_t* helpString)
{
    #if !defined(__WXMSW__)
    MarshalExceptions<void>([&](){
    #endif
        obj->SetToolShortHelp(toolId, helpString);
    #if !defined(__WXMSW__)
    });
    #endif
}
ALTERNET_UI_API char16_t* AuiToolBar_GetToolLongHelp_(AuiToolBar* obj, int toolId)
{
    #if !defined(__WXMSW__)
    return MarshalExceptions<char16_t*>([&](){
    #endif
        return AllocPInvokeReturnString(obj->GetToolLongHelp(toolId));
    #if !defined(__WXMSW__)
    });
    #endif
}
ALTERNET_UI_API void AuiToolBar_SetToolLongHelp_(AuiToolBar* obj, int toolId, const char16_t* helpString)
{
    #if !defined(__WXMSW__)
    MarshalExceptions<void>([&](){
    #endif
        obj->SetToolLongHelp(toolId, helpString);
    #if !defined(__WXMSW__)
    });
    #endif
}
ALTERNET_UI_API uint64_t AuiToolBar_GetToolCount_(AuiToolBar* obj)
{
    #if !defined(__WXMSW__)
    return MarshalExceptions<uint64_t>([&](){
    #endif
        return obj->GetToolCount();
    #if !defined(__WXMSW__)
    });
    #endif
}
ALTERNET_UI_API void AuiToolBar_SetToolMinSize_(AuiToolBar* obj, int tool_id, int width, int height)
{
    #if !defined(__WXMSW__)
    MarshalExceptions<void>([&](){
    #endif
        obj->SetToolMinSize(tool_id, width, height);
    #if !defined(__WXMSW__)
    });
    #endif
}
ALTERNET_UI_API SizeI_C AuiToolBar_GetToolMinSize_(AuiToolBar* obj, int tool_id)
{
    #if !defined(__WXMSW__)
    return MarshalExceptions<SizeI_C>([&](){
    #endif
        return obj->GetToolMinSize(tool_id);
    #if !defined(__WXMSW__)
    });
    #endif
}
ALTERNET_UI_API void AuiToolBar_SetAlignment_(AuiToolBar* obj, int tool_id, int l)
{
    #if !defined(__WXMSW__)
    MarshalExceptions<void>([&](){
    #endif
        obj->SetAlignment(tool_id, l);
    #if !defined(__WXMSW__)
    });
    #endif
}
ALTERNET_UI_API int AuiToolBar_GetAlignment_(AuiToolBar* obj, int tool_id)
{
    #if !defined(__WXMSW__)
    return MarshalExceptions<int>([&](){
    #endif
        return obj->GetAlignment(tool_id);
    #if !defined(__WXMSW__)
    });
    #endif
}
ALTERNET_UI_API void AuiToolBar_SetEventCallback_(AuiToolBar::AuiToolBarEventCallbackType callback)
{
    AuiToolBar::SetEventCallback(callback);
}