Source/Alternet.UI/Native/AuiToolBar.cs

        
        public void SetToolProportion(int toolId, int proportion)
        {
            CheckDisposed();
            NativeApi.AuiToolBar_SetToolProportion_(NativePointer, toolId, proportion);
        }
        
        public int GetToolProportion(int toolId)
        {
            CheckDisposed();
            return NativeApi.AuiToolBar_GetToolProportion_(NativePointer, toolId);
        }
        
        public void SetToolSeparation(int separation)
        {
            CheckDisposed();
            NativeApi.AuiToolBar_SetToolSeparation_(NativePointer, separation);
        }
        
        public int GetToolSeparation()
        {
            CheckDisposed();
            return NativeApi.AuiToolBar_GetToolSeparation_(NativePointer);
        }
        
        public void SetToolSticky(int toolId, bool sticky)
        {
            CheckDisposed();
            NativeApi.AuiToolBar_SetToolSticky_(NativePointer, toolId, sticky);
        }
        
        public bool GetToolSticky(int toolId)
        {
            CheckDisposed();
            return NativeApi.AuiToolBar_GetToolSticky_(NativePointer, toolId);
        }
        
        public string GetToolLabel(int toolId)
        {
            CheckDisposed();
            return NativeApi.AuiToolBar_GetToolLabel_(NativePointer, toolId);
        }
        
        public void SetToolLabel(int toolId, string label)
        {
            CheckDisposed();
            NativeApi.AuiToolBar_SetToolLabel_(NativePointer, toolId, label);
        }
        
        public void SetToolBitmap(int toolId, ImageSet? bitmapBundle)
        {
            CheckDisposed();
            NativeApi.AuiToolBar_SetToolBitmap_(NativePointer, toolId, bitmapBundle?.NativePointer ?? IntPtr.Zero);
        }
        
        public string GetToolShortHelp(int toolId)
        {
            CheckDisposed();
            return NativeApi.AuiToolBar_GetToolShortHelp_(NativePointer, toolId);
        }
        
        public void SetToolShortHelp(int toolId, string helpString)
        {
            CheckDisposed();
            NativeApi.AuiToolBar_SetToolShortHelp_(NativePointer, toolId, helpString);
        }
        
        public string GetToolLongHelp(int toolId)
        {
            CheckDisposed();
            return NativeApi.AuiToolBar_GetToolLongHelp_(NativePointer, toolId);
        }
        
        public void SetToolLongHelp(int toolId, string helpString)
        {
            CheckDisposed();
            NativeApi.AuiToolBar_SetToolLongHelp_(NativePointer, toolId, helpString);
        }
        
        public ulong GetToolCount()
        {
            CheckDisposed();
            return NativeApi.AuiToolBar_GetToolCount_(NativePointer);
        }
        
        public void SetToolMinSize(int tool_id, int width, int height)
        {
            CheckDisposed();
            NativeApi.AuiToolBar_SetToolMinSize_(NativePointer, tool_id, width, height);
        }
        
        public Alternet.Drawing.SizeI GetToolMinSize(int tool_id)
        {
            CheckDisposed();
            return NativeApi.AuiToolBar_GetToolMinSize_(NativePointer, tool_id);
        }
        
        public void SetAlignment(int tool_id, int l)
        {
            CheckDisposed();
            NativeApi.AuiToolBar_SetAlignment_(NativePointer, tool_id, l);
        }
        
        public int GetAlignment(int tool_id)
        {
            CheckDisposed();
            return NativeApi.AuiToolBar_GetAlignment_(NativePointer, tool_id);
        }
        
        static GCHandle eventCallbackGCHandle;
        
        static void SetEventCallback()
        {
            if (!eventCallbackGCHandle.IsAllocated)
            {
                var sink = new NativeApi.AuiToolBarEventCallbackType((obj, e, parameter) =>
                {
                    var w = NativeObject.GetFromNativePointer<AuiToolBar>(obj, p => new AuiToolBar(p));
                    if (w == null) return IntPtr.Zero;
                    return w.OnEvent(e, parameter);
                }
                );
                eventCallbackGCHandle = GCHandle.Alloc(sink);
                NativeApi.AuiToolBar_SetEventCallback_(sink);
            }
        }
        
        IntPtr OnEvent(NativeApi.AuiToolBarEvent e, IntPtr parameter)
        {
            switch (e)
            {
                case NativeApi.AuiToolBarEvent.ToolDropDown:
                {
                    ToolDropDown?.Invoke(); return IntPtr.Zero;
                }
                case NativeApi.AuiToolBarEvent.BeginDrag:
                {
                    BeginDrag?.Invoke(); return IntPtr.Zero;
                }
                case NativeApi.AuiToolBarEvent.ToolMiddleClick:
                {
                    ToolMiddleClick?.Invoke(); return IntPtr.Zero;
                }
                case NativeApi.AuiToolBarEvent.OverflowClick:
                {
                    OverflowClick?.Invoke(); return IntPtr.Zero;
                }
                case NativeApi.AuiToolBarEvent.ToolRightClick:
                {
                    ToolRightClick?.Invoke(); return IntPtr.Zero;
                }
                case NativeApi.AuiToolBarEvent.ToolCommand:
                {
                    ToolCommand?.Invoke(); return IntPtr.Zero;
                }
                default: throw new Exception("Unexpected AuiToolBarEvent value: " + e);
            }
        }
        
        public Action? ToolDropDown;
        public Action? BeginDrag;
        public Action? ToolMiddleClick;
        public Action? OverflowClick;
        public Action? ToolRightClick;
        public Action? ToolCommand;
        
        [SuppressUnmanagedCodeSecurity]
        public class NativeApi : NativeApiProvider
        {
            static NativeApi() => Initialize();
            
            [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
            public delegate IntPtr AuiToolBarEventCallbackType(IntPtr obj, AuiToolBarEvent e, IntPtr param);
            
            public enum AuiToolBarEvent
            {
                ToolDropDown,
                BeginDrag,
                ToolMiddleClick,
                OverflowClick,
                ToolRightClick,
                ToolCommand,
            }
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void AuiToolBar_SetEventCallback_(AuiToolBarEventCallbackType callback);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern IntPtr AuiToolBar_Create_();
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern long AuiToolBar_GetCreateStyle_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void AuiToolBar_SetCreateStyle_(IntPtr obj, long value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern int AuiToolBar_GetEventToolId_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool AuiToolBar_GetEventIsDropDownClicked_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern Alternet.Drawing.PointI AuiToolBar_GetEventClickPoint_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern Alternet.Drawing.RectI AuiToolBar_GetEventItemRect_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void AuiToolBar_DoOnCaptureLost_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void AuiToolBar_DoOnLeftUp_(IntPtr obj, int x, int y);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void AuiToolBar_DoOnLeftDown_(IntPtr obj, int x, int y);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern System.IntPtr AuiToolBar_CreateEx_(long styles);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void AuiToolBar_SetArtProvider_(IntPtr obj, System.IntPtr art);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern System.IntPtr AuiToolBar_GetArtProvider_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern int AuiToolBar_GetToolKind_(IntPtr obj, int toolId);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern System.IntPtr AuiToolBar_AddTool_(IntPtr obj, int toolId, string label, IntPtr bitmapBundle, string shortHelpString, int itemKind);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern System.IntPtr AuiToolBar_AddTool2_(IntPtr obj, int toolId, string label, IntPtr bitmapBundle, IntPtr disabledBitmapBundle, int itemKind, string shortHelpString, string longHelpString, System.IntPtr clientData);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern System.IntPtr AuiToolBar_AddTool3_(IntPtr obj, int toolId, IntPtr bitmapBundle, IntPtr disabledBitmapBundle, bool toggle, System.IntPtr clientData, string shortHelpString, string longHelpString);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern System.IntPtr AuiToolBar_AddLabel_(IntPtr obj, int toolId, string label, int width);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern System.IntPtr AuiToolBar_AddControl_(IntPtr obj, int toolId, System.IntPtr control, string label);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern System.IntPtr AuiToolBar_AddSeparator_(IntPtr obj, int toolId);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern System.IntPtr AuiToolBar_AddSpacer_(IntPtr obj, int toolId, int pixels);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern System.IntPtr AuiToolBar_AddStretchSpacer_(IntPtr obj, int toolId, int proportion);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool AuiToolBar_Realize_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern System.IntPtr AuiToolBar_FindControl_(IntPtr obj, int windowId);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern System.IntPtr AuiToolBar_FindToolByPosition_(IntPtr obj, int x, int y);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern System.IntPtr AuiToolBar_FindToolByIndex_(IntPtr obj, int idx);
